--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.469.0",
+    "motion": "^12.6.3",
     "next": "15.1.3",
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
