--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.7",
     "@nimpl/middleware-chain": "^0.4.0",
+    "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-visually-hidden": "^1.1.1",
