--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.15.0",
     "husky": "^9.1.7",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
