--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^12.15.0",
     "husky": "^9.1.7",
     "lucide-react": "^0.511.0",
+    "motion": "^12.15.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
